pre comment merge

--- a/market.tex
+++ b/market.tex
@@ -19,9 +19,12 @@ We then analyze a simple bid based variation of the mechansim, and provide a suf
 % define a and c and r beforehand, pointer to notation section
 As before $c$ is the action chosen by the mechanism, $a$ is the action that the subjec actually carries out, and $r$ is the reward received by the subject. An expert $i$ receives signal $s_i$, and we denote by $S$ the set of all experts signals.
 We consider a single subject with access to $K$ possible choices, and access to  $N$ experts, each of whom have access to some signal $s_i$ which are potentially informative about $\expec[r|a,c,S]$. The set of possible signals and actions are both finite.
+
+%TODO note limit of this that agent isnt considering what the mechanism is in deciding how to map c to a.
+
 We use $P$ to denote the apriori joint probability distribution over $(r,a,c,S) $ which is common knowledge unless we explicitly state otherwise.  
 
-When denoting the expectation $\expec[r|a]$
+When notating expectation in games with common priors we supress the variables that are being marginalized over in general, so for example $\expec[r|c]$ is the expected reward conditional on a given choice of action by the mechanism, where we  
 
 Thus given a mechanism $M$, and denoting unobservable characteristics (the latent state) as $u$
 
