--- a/twosides.tex
+++ b/twosides.tex
@@ -301,4 +301,4 @@ Where $\zeta$ and $\eta$ are again set a priori. Given we are attempting not to 
 
  concerns;
 
- the experts knwo the estimator you are using, can outbid you and then make the chocies so you realized bias is high. solution 
+ the experts knwo the estimator you are using, can out bid you and then make the chocies so you realized bias is high. They could 
