--- a/twosides.tex
+++ b/twosides.tex
@@ -305,4 +305,6 @@ Where $\zeta$ and $\eta$ are again set a priori. Given we are attempting not to 
 
  concerns;
 
- the experts knwo the estimator you are using, can out bid you and then make the chocies so you realized bias is high. They could 
+ the experts knwo the estimator you are using, can out bid you and then make the chocies so you realized bias is high. One way to try to avoid this would be to take out the rounds where the expert $i$ won the auction when calculating the signal value of $i$, note this is biased (it could be that those are when he brings a lot of value to both the signal and the aggregation of signals,a dn this is quite natural)
+
+
