--- a/twosides.tex
+++ b/twosides.tex
@@ -7,16 +7,23 @@
 
 
 Every day there are new patients with diseases diagnosed and treatments that need to be chosen. 
-The natural world scenarios that motivate the mechanism are much more naturally cast not as one shot interactions, but as repeated games with many experts and a sequence of subjects who seek advice before making a decision which only affect them.
+The scenarios that motivate optimal decision elicitation are more naturally cast not as one shot interactions, but as repeated games with many experts and a sequence of subjects who seek advice before making a decision which only affect them.
+This combines the central aspects of bandits with compliance awareness (a sequence of choices and learning from past experience, where the actions of subjects are not bound to follow the algorithm choice) and elicitation of information form experts to enable optimal decisions without the advice being bounding. 
+Bounded regret algorithms with compliance awareness can be seen as addressing the special case where the experts signals are known apriori to be uninformative, and thus only the experience can be learned from.
+Our one-decision mechanism is the special case for $T={1}$, thus there is no role for exploration or learning from experience, since there are no future decisions  to help inform.
 
-This combines the central aspects of bandits with compliance awareness (a sequence of choices and learning from past experience, including noncompliance) and elicitation of information form experts to enable optimal decisions without the advice being bounding. 
-Bounded regret algorithms with compliance awareness can be seen as addressing the special case where the experts signals are known apriori to be uninformative, and thus only the experience can be learned from. Our one-decision mechanism is the special case for $T={1}$, thus there is no role for exploration or learning from experience, since there are no future decisions  to help inform.
-
+This 
 To create the right incentives for motivating exploratory choices, we show that the choice of action should be linked not just to the reward on the period it is taken, but to the full stream of future rewards after it. 
 
-In contrast to the previous chapters theoretical motivation and focus on equilibria in direct mechanisms under common priors, in this chapter we focus largely on practical mechanisms, and our constructive efforts .
+In contrast to the previous chapters motivation in the literature, in this chapter we switch our focus to the of constructing practical mechanisms. 
+The motivation for this switch is that the setting is natural and no mechanisms exists. 
+Theory provides a useful guide for the structure of the mechanism and it's buidling blocks.
+We take a compositional approach, attempting as much as possible to reuse existing algorithms and mechanisms.
 
-However to start the chapter, analizing a natural direct mechanism with common priors; which is simple the sum of payoffs and the sequence of allocations of repeating the direct one shot mechanism. The failure of this mechanism makes clear the need to link the rewards of future periods.
+
+To build up to the main practical design by analysing two simplified models that illustrate the two key characteristics of our mechanism. 
+First, The failure of the one shot mechanism makes clear the need to link the payoff to experts of a given choice to the rewards of future periods, so as to internalize the value of exploration.
+Seccond, we consider how to aggregate over signals in this setting, and in particular how to do so without using having a mechanism that requires access to the prior, nor requiring that experts who wish to contribute their signal need to have a good prior distribution to do so, as long as they can comunicate their signals clearly to an expert which does.
 
 %(which can be taken as strong benchmark tha the bidding mechanisms can attempt to approximate).
 
@@ -55,7 +62,7 @@ The game occurs over $T$ steps, at each step: a subject $t$ arrives, $N$ experts
 At the end of the final period the mechanism makes payments to the experts $pi_i( \cup \hat{s}_t,c_t,r_t,a_t \forall t \in T)$.
 
 
-\section{A sequence of one shot mechanisms is not efficient}
+\section{A sequence of one shot mechanisms is inefficient}
 
 Attempting to run the single action elicitation mechanism repeatedly, that is allocating according to the max posterior reward and using the payment rule:
 
@@ -83,6 +90,12 @@ let everyone have the same prior, then upon observing the outcome, everyone has 
 \end{eg}
 
 \DBA{this result (that price mechanisms can discourage exploration unless ``intellectual property'' is built in) is very nice. I imagine there's some kind of literature about this, but have no idea what formalism the IP guys would use.}
+\NDP{There is a positive externality on future time periods from exploration today, so we want to internalize those benefits for the current decision maker so as to align his incentives. It in in a line of welfare eocnomics that stretches back to 1920 formally with Pigou and the original articulation is atttributed to  Sidgwick or Marshall, but really is a bunch of 19th century economists who learned calculus more or less figured it out.
+
+Specifically this is a intertemporal externality which feels related to those comes form learning by doing, 
+%http://www.jstor.org/stable/2662972?seq=1#page_scan_tab_contents
+}
+
 
 \begin{eg}[Data ineficiency of selective revelation]
 One agent knows which action has high reward this period, we need them to win for efficiency, the other agent has a signal which is complementary to the outocme of the first action when the ifrst action is high value, and reveals a even higher value action. We need agent 1 to win (the bidding) in the first period (and thus only they see the signal), but we need agent 2 to see the first signal to achieve efficiency in the seccond.
@@ -92,6 +105,22 @@ One agent knows which action has high reward this period, we need them to win fo
 
 %\section{A Direct Mechanism which internatilizes exploration}
 % TODO ? you  have to take the expected value of the future rewards with the others signals but without exploration as the baseline which to reward?
+
+For many problems the sequential use of mechanisms while suboptimal is not too bad int he sense that hte loss of efficincy fo the mechanism can be bounded relative to the optimum in a Price of Anarchy analysis (see background chapter for a brief overvie of such results).
+This is not the case for sequential optimal action elicitaiton. Repeating any efficient one shot mechanism can lead to linearly worse performance than the optimal sequential mechanism ont he same problem.
+
+\begin{thm}
+The regret obtained from repeatedly using any efficient one shot mechanism can be arbitrarily smaller than that obtained by the efficient sequential strategy.
+
+\end{thm}
+
+
+
+\begin{proof}
+The one shot allocation creates incentives equivalent to the greedy policy, since any information it reveals is accessible to all and thus priced in to future rounds, there is no benefit to exploring on a given round. Since the greedy policy 
+
+\end{proof}
+
 
 
 \section{A Simple Bidding Mechanism which Explores}
